--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "slidev build",
-    "dev": "slidev",
-    "export": "slidev export"
+    "build": "pnpm -r build"
   },
   "dependencies": {
     "@slidev/cli": "^0.48.8",
