--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aeria-presentations",
   "type": "module",
   "private": true,
+  "packageManager": "pnpm@8.7.6",
   "scripts": {
     "build": "pnpm -r build"
   },
